<resources>
    <string name="app_name">MiApp</string>
    <!---Inicio-->
    <string name="encabezado_inicio">Datos</string>
    <string name="nombre">Nombre: </string>
    <string name="apellidos">Apellidos: </string>
    <string name="numero">Numero: </string>
    <string name="email">Email: </string>
    <string name="boton_inicio">Guardar datos</string>
    <!---Mostrar info-->
    <string name="encabezado_mostrarinfo">Datos del Usuario</string>
    <!---Uso de nombre, apellidos, numero e email de inicio-->
</resources>