<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/grey_1"
    android:layout_gravity="center"
    tools:context=".MostrarInfo">

    <TextView
        android:id="@+id/texto_mostrardatos"
        android:fontFamily="@font/anton_regular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       android:gravity="center"
        android:text="@string/encabezado_mostrarinfo"
        android:background="@color/grey_4"
        android:textColor="@color/black"
        android:textSize="40sp"
        />

    <ImageView
        android:id="@+id/imagen2"
        android:layout_width="wrap_content"
        android:layout_height="245dp"
        android:layout_marginLeft="152dp"
        android:layout_marginRight="150dp"
        android:src="@drawable/logo_android_studio"

        />

    <TextView
        android:id="@+id/nombre_user"
        android:text="@string/nombre"
        android:fontFamily="@font/teko_regular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/grey_0"
        android:textColor="@color/black"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textSize="30sp"
        />

    <TextView
        android:id="@+id/apellidos_user"
        android:text="@string/apellidos"
        android:fontFamily="@font/teko_regular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/grey_0"
        android:textColor="@color/black"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textSize="30sp"
        />

    <TextView
        android:id="@+id/numero_user"
        android:text="@string/numero"
        android:fontFamily="@font/teko_regular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/grey_0"
        android:textColor="@color/black"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textSize="30sp"
        />

    <TextView
        android:id="@+id/email_user"
        android:text="@string/email"
        android:fontFamily="@font/teko_regular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/grey_0"
        android:textColor="@color/black"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textSize="30sp"
        />




</LinearLayout>